# sms-service

./: .gitignore  README.md  boot.sh  main.py  pyproject.toml
src/sms-service/: lifespan.py  main.py
src/sms-service/models/: sms_user.py
src/sms-service/services/: postgresql_manager.py  rabbit_manager.py  redis_manager.py
src/sms-service/utils/: template_request.py
tests/: conftest.py  run.sh  test_sms_logic.py
