[project]
name = "sms-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "asyncio-redis>=0.16.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
